# apertium-pan

./: .gitattributes  AUTHORS  Makefile.am  README  apertium-pan.pan.dix  apertium-pan.pan.rlx  apertium-pan.pan_Arab.dix  apertium-pan.pan_Guru.dix  apertium-pan.pan_Guru.tagged  apertium-pan.pc.in  configure.ac  modes.xml  pan_Guru.prob
test/: arab-input.txt  arab-morph-expected.txt  guru-input.txt  guru-morph-expected.txt  tests.json
